--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -20,6 +20,20 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "AppSync"
+    },
+    "slademoRuleApi": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "category": "function",
+          "resourceName": "slademoRuleFunction"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "API Gateway"
     }
   },
   "auth": {
@@ -54,6 +68,31 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
+    }
+  },
+  "function": {
+    "slademoRuleFunction": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_slademoRuleFunction_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "slademoRuleFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_slademoRuleFunction_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "slademoRuleFunction"
+        }
+      ]
     }
   },
   "storage": {
