--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.1",
+    "@decisionrules/decisionrules": "^1.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^6.0.12",
+    "axios": "^1.6.5",
+    "babel-loader": "^9.1.3",
+    "create-react-app": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.3.2",
+    "webpack": "^5.89.0"
   },
   "scripts": {
     "start": "react-scripts start",
